--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,21 @@
 <div class="container">
-<a routerLink="auth/login">Login</a> | <a routerLink="products">Products</a>
+
+  <div style="width: 100%">
+    <a routerLink="/" class="ost">Home</a>
+    <div *ngIf="profile$ | async as profile else login" style="float: right">
+      <span class="ost">Welcome {{profile.name}}</span>
+
+      <a
+        (click)="logout()"
+        class="float-right">Logout</a>
+    </div>
+    <ng-template #login >
+      <a
+        routerLink="auth/login"
+        class="float-right">Login</a>
+    </ng-template>
+
+  </div>
+
 <router-outlet></router-outlet>
 </div>
