--- a/src/app/products/list/products.component.html
+++ b/src/app/products/list/products.component.html
@@ -2,6 +2,6 @@
 <a routerLink="create" class="btn btn-sm btn-primary">Create New Product</a>
 <ul *ngIf="$products | async as productsList">
   <li *ngFor="let product of productsList.list">
-    #{{ product.id }} - Name: {{ product.name }} - <a routerLink="details/{{ product.id }}">Details</a> - <a routerLink="update/{{ product.id}}">Edit</a>
+    #{{ product.id }} - Name: {{ product.name }} - <a routerLink="details/{{ product.id }}">Details</a> - <a routerLink="update/{{ product.id}}">Edit</a> - <a routerLink="delete/{{ product.id }}">Delete</a>
   </li>
 </ul>
